Fix edge cases with and typing of integer literals.